2013-05-05  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (inferior-octave-strip-ctrl-g)
	(inferior-octave-output-filter): Remove.
	(octave-send-region, inferior-octave-startup): Fix callers.
	(inferior-octave-mode-map): Don't use comint-dynamic-complete.
	(octave-binary-file-extensions): New user variable.
	(octave-find-definition): Confirm if opening binary files.
	(octave-help-file): Use octave-find-definition to get the binary
	confirmation.
	(octave-help): Adjust for octave-help-file change.

2013-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/pascal.el (pascal-font-lock-keywords): Use backquotes.
	Merge the two entries that handle function definitions.
	(pascal--syntax-propertize): New const.
	(pascal-mode): Use it.  Use setq-local.

2013-05-04  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-from-outlook-function): New variable.
	(diary-from-outlook): Respect diary-from-outlook-function.

2013-05-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (read-expression-map): Use completion-at-point (bug#14255).
	Move the declaration from C.
	(read-minibuffer, eval-minibuffer): Move from C.
	(completion-setup-function): Avoid minibuffer-completion-contents.

2013-05-03  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-font-lock-keywords): Do not
	dehighlight 'end' in comments or strings.
	(octave-completing-read, octave-goto-function-definition):
	New helpers.
	(octave-help-buffer): New user variable.
	(octave-help-file, octave-help-function): New button types.
	(octave-help): New command and bind it to C-h ;.
	(octave-find-definition): New command and bind it to M-.
	(user-error): Alias to error if not defined.

2013-05-02  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-mode-syntax-table): Correct syntax
	for \.  (bug#14332)
	(octave-font-lock-keywords): Include [ and {.

2013-05-02  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (inferior-octave-startup-file): Change default.